WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278468
Crash in `FrameLoader::checkLoadCompleteForThisFrame`
https://bugs.webkit.org/show_bug.cgi?id=278468
Summary
Crash in `FrameLoader::checkLoadCompleteForThisFrame`
Charlie Wolfe
Reported
2024-08-21 10:00:41 PDT
An unneeded strong reference is held on `document` in the lambda passed to `DataDetection::detectContentInFrame`. Remove it to avoid destroying `document` on a background thread.
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-08-21 10:00:42 PDT
<
rdar://problem/134070948
>
Charlie Wolfe
Comment 2
2024-08-21 10:01:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32532
EWS
Comment 3
2024-08-21 12:32:49 PDT
Committed
282572@main
(04aa45e3bbf8): <
https://commits.webkit.org/282572@main
> Reviewed commits have been landed. Closing PR #32532 and removing active labels.
EWS
Comment 4
2024-08-22 15:26:00 PDT
Committed
280938.259@safari-7619-branch
(18d9a2829a49): <
https://commits.webkit.org/280938.259@safari-7619-branch
> Reviewed commits have been landed. Closing PR #1632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug