Cherry-pick 04aa45e3bbf8. rdar://134070948

Crash in `FrameLoader::checkLoadCompleteForThisFrame`
    https://bugs.webkit.org/show_bug.cgi?id=278468
    rdar://134070948

    Reviewed by Ryosuke Niwa.

    An unneeded strong reference is held on `document` in the lambda passed to
    `DataDetection::detectContentInFrame`. Remove it to avoid destroying `document` on a background thread.

    * Source/WebCore/loader/FrameLoader.cpp:
    (WebCore::FrameLoader::checkLoadCompleteForThisFrame):

    Canonical link: https://commits.webkit.org/282572@main

Canonical link: https://commits.webkit.org/280938.259@safari-7619-branch